# fatutil

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac  fatutil.c  libfat.c  libfat.h
bits/: libfat.h
fuse-umfuse-fat-0.1/: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  genfat.sh  libfat.c  test.sh
